--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,12 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.alibaba.fastjson2</groupId>
+            <artifactId>fastjson2</artifactId>
+            <version>2.0.30</version>
+        </dependency>
+
 <!--        &lt;!&ndash; https://mvnrepository.com/artifact/dev.langchain4j/langchain4j &ndash;&gt;-->
 <!--        <dependency>-->
 <!--            <groupId>dev.langchain4j</groupId>-->
